# srain

./: CMakeLists.txt
cmake/: GResources.cmake
data/ui/: app.glade  buffer_menu.glade  config_panel.glade  image_window.glade  nick_menu.glade
src/config/: reader.c
src/core/: app_irc_event.c  message.c
src/filter/: pattern_filter.c
src/inc/core/: message.h
src/inc/libecdsaauth/: keypair.h
src/inc/sirc/: sirc.h
src/lib/: log.c  path.c
src/lib/libecdsaauth/: base64.c  keypair.c  op.c
src/render/: pattern_render.c
src/sui/: nick_menu.c  sui.c  sui_app.c  sui_message_list.c  sui_side_bar.c  sui_url_previewer.c  sui_window.c  sui_window.h
